Substring autocomplete when linking to note or tag
